# uam

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_ISSUES.md  LICENSE  PERFORMANCE_ISSUES.md  PHILOSOPHY.md  README.md  SECURITY_ISSUES.md  config.example.json  pyproject.toml
.claude/: settings.json
.claude/commands/: model.md  uam.md
.claude/hooks/: uam-ask-router.py  uam-autostart.py
.hypothesis/constants/: 012c4a23a53cd6b2  0a7f5120af7e6f81  0aeeea3934a768dd  0ed644b39f0bf682  17014a6447216892  19f6aaeba06044c7  2275936ad6b83eea  250d473617816492  2c9a28864733de97  32f7fb25013da8fd  33280034cf9b3fe3  444cf9a771e40f83  46fc42905554d1e3  47c77d1f5d4f9033  55d624882240e8fa  5711cbcd0a3ada0a  58eb0e0511756da2  59a37dda588e226d  608e1039aa297b33  65182c3a33e7f29f  682e4fc8edd88991  7be4178bfccc265e  8055424d61fa10f7  8067a1dc514b6a5a  8f0b6cf1ef20ef25  988fe4b83c24a592  9bac7bded2542649  9edd5723298a5477  a58ff3c6cd11ef41  a99196c92c933e8f  aa5dc1a7210f4221  ad3aed7d78572aac  b35dfd68b58caf0d  be36cf361a9d79a3  bf2295825bb39d71  c3b3df3ebcdb26da  cf1595af29a5ddc7  d6538af4fdf0d393  debe292f01dd8bd3  e04d982adf029d06  (+6 more)
src/uam/: __main__.py  (+8 more)
tests/: conftest.py  strategies.py  test_api_format.py  test_capabilities.py  test_config.py  test_discovery_anthropic.py  test_discovery_local.py  test_discovery_openrouter.py  test_discovery_runpod.py  test_logging.py  test_main.py  test_proxy.py  test_remaining_fixes.py  test_router.py  test_security_and_correctness_fixes.py  test_state.py  test_translate.py  test_translate_buffer.py  test_translate_hardened.py
(+5 files in other folders)
