[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uam"
version = "0.4.17"
description = "Use Any Model with Claude Code — multi-backend model router"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "aioresponses>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
